ветка routes-refactor закончил рафакторинг routes и исправил небольшие баги

--- a/src/components/sass/main.scss
+++ b/src/components/sass/main.scss
@@ -25,6 +25,9 @@ $dark-gray: #414141;
 @import "sections/index/registration";
 /* index-end */
 
+/* private */
+@import "sections/private/main";
+
 /* cabinet */
 @import "sections/cabinet/main";
 
