--- a/src/components/sass/sections/login/main.scss
+++ b/src/components/sass/sections/login/main.scss
@@ -66,7 +66,6 @@
   }
 }
 
-
 .login__submit {
   display: block;
   margin: 0 auto;
@@ -83,6 +82,10 @@
   border: none;
   outline: none;
   cursor: pointer;
+
+  &:hover {
+    background-color: #dd5a5a
+  }
 }
 
 .login__forget-password {
@@ -92,5 +95,5 @@
   margin: 0 auto;
   color: #626262;
   text-decoration: none;
-  border-bottom: 1px solid #c4c4c4;
+
 }
